slightly better git ui, more functionality.

--- a/gpt_dev/gpt_dev.css
+++ b/gpt_dev/gpt_dev.css
@@ -563,6 +563,11 @@ button:hover {
   height: 80vh;
 }
 #fileModal .file-tree-panel,
+
+#fileModal .git-desktop {
+  height: 100%;
+}
+
 #fileModal .git-browser-panel {
   flex: 1;
   overflow: auto;
